<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NICE Guidelines</string>    
    <string name="app_label">NICE Guidelines</string>
    <string name="search_hint">Search guideline names</string>

    <string name="main_menu_option_settings">settings</string>
    <string name="main_menu_option_help">help</string>
    <string name="main_menu_option_feedback">feedback</string>
    <string name="main_menu_option_about">about</string>
    <string name="main_menu_option_get_all">download all</string>
    <string name="main_menu_option_search">search</string>
</resources>
