<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/settings"
		android:icon="@android:drawable/ic_menu_preferences"
		android:title="@string/main_menu_option_settings" />
	<item android:id="@+id/help"
		android:icon="@android:drawable/ic_menu_help"
		android:title="@string/main_menu_option_help" />
	<item android:id="@+id/feedback"
		android:icon="@android:drawable/ic_menu_send"
		android:title="@string/main_menu_option_feedback" />
	<item android:id="@+id/about"
		android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/main_menu_option_about" />
	<item android:id="@+id/get_all"
		android:icon="@android:drawable/ic_menu_save"
		android:title="@string/main_menu_option_get_all" />
	<item android:id="@+id/search"
		android:icon="@android:drawable/ic_menu_search"
		android:title="@string/main_menu_option_search" />
</menu>
